# MuSCAT2_transit_pipeline

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
data/: m2_catalog.csv  toi_catalog.csv
data/templates/: eclipse_analysis_template.ipynb  tfop_readme.txt  tfop_report.txt  tfop_template.ipynb  transit_analysis_template.ipynb
doc/: analysis_manual.md
doc/source/: conf.py  index.rst  overview.rst  ta_pre_analysis.rst  ta_tfop_analysis.rst  ta_transit_analysis.rst  transit_analysis.rst  tutorials.rst
docs/source/: common_problems.rst  conf.py  index.rst  overview.rst  photometry.rst  ta_no_transit.rst  ta_pre_analysis.rst  ta_tfop_analysis.rst  ta_tfop_analysis_1.rst  ta_tfop_analysis_2.rst  ta_tfop_analysis_3.rst  ta_transit_analysis.rst  transit_analysis.rst  tutorials.rst
docs/source/eclipse_modelling/: eclipse_modelling.rst
docs/source/multiepoch_modelling/: multiepoch_modelling.rst
muscat2ph/: catalog.py  centroider.py  cmcentroider.py  dfcentroider.py  m2obsnight.py  organizer.py  phdata.py  photometry.py  psf.py
muscat2ph/data/: __init__.py  m2_catalog.csv  toi_catalog.csv
muscat2ta/: __init__.py  filters.py  gp.py  lc.py  lpf.py  m2baselpf.py  m2eclipselpf.py  m2lpf.py  m2mnlpf.py  mcvlpf.py  mocklc.py  multiceleriteloglikelihood.py  muscatreader.py  parameter.py  photometry.py  tfopanalysis.py  transitanalysis.py
muscat2ta/data/: __init__.py
muscat2ta/data/templates/: __init__.py
notebook/: create_mock_lc.ipynb  transit_analysis_template.ipynb  transit_analysis_template_cl.ipynb
notebook/data/hat_p_20/: README
notebook/data/wasp-43b/180218/: wasp-43b_180218_g.nc  wasp-43b_180218_i.nc  wasp-43b_180218_r.nc  wasp-43b_180218_z_s.nc
src/: lpf.py  mocklc.py  parameter.py
