#  MuSCAT2 photometry and transit analysis pipeline
#  Copyright (C) 2019  Hannu Parviainen
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MuSCAT2TA"
version = "0.2"
description = "Package for MuSCAT2 transit analysis."
readme = "README.md"
license = "GPL-2.0-only"
authors = [
    { name = "Hannu Parviainen", email = "hpparvi@gmail.com" }
]
keywords = ["astronomy", "astrophysics", "exoplanets"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy>=0.16",
    "astropy",
    "tqdm",
    "traitlets",
    "pandas",
    "xarray",
    "photutils",
    "matplotlib",
    "astroquery",
    "corner",
    "seaborn",
    "numba",
    "george",
    "pytransit",
    "ldtk",
    "uncertainties",
    "nudged",
    "httpx",
    "patsy",
    "statsmodels",
    "netcdf4"
]

[project.urls]
Homepage = "https://github.com/hpparvi/muscat2ta"

[tool.setuptools.packages.find]
include = ["muscat2ph*", "muscat2ta*"]

[tool.setuptools.package-data]
"muscat2ph.data" = ["*.csv"]
"muscat2ta.data.templates" = ["*.ipynb"]

[tool.setuptools]
script-files = [
    "bin/m2organize",
    "bin/lcoorganize",
    "bin/m2photometry",
    "bin/lcophotometry",
    "bin/m2dfphotometry",
    "bin/m2astrometry",
    "bin/m3astrometry",
    "bin/m2nbtemplate",
    "bin/m2init",
    "bin/m2update",
    "bin/m2mkref",
    "bin/lcomkref",
    "bin/m2findtarget",
]
